@@ -2,6 +2,7 @@ package de.dfki.mary.voicebuilding.tasks
 
 import groovy.json.JsonBuilder
 import org.gradle.api.DefaultTask
+import org.gradle.api.JavaVersion
 import org.gradle.api.file.DirectoryProperty
 import org.gradle.api.file.RegularFileProperty
 import org.gradle.api.provider.ListProperty
@@ -66,9 +67,16 @@ class MaryInterfaceBatchTask extends DefaultTask {
         batchFile.text = new JsonBuilder(batch).toPrettyString()
         project.javaexec {
             classpath project.configurations.marytts
-            main 'marytts.BatchProcessor'
+            mainClass = 'marytts.BatchProcessor'
             args batchFile
             systemProperties << maryttsProperties.getOrElse([:])
+            if (JavaVersion.current().java9Compatible) {
+                jvmArgs = [
+                        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+                ]
+            }
         }
     }
 }
